--- a/BaseLine.ipynb
+++ b/BaseLine.ipynb
@@ -500,7 +500,9 @@
    "cell_type": "code",
    "execution_count": 49,
    "id": "82a19afc",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -518,6 +520,17 @@
     "\n",
     "pred = model.predict( np.expand_dims(X_train[0], axis=0) )\n",
     "print(f\"Pred {pred}: Real Label {y_train[0]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3cadaac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ktfuhgdkjfhg\n",
+    "sdrser9"
    ]
   }
  ],
